@@ -101,6 +101,13 @@ GenerateLoader (bool)
 	LD_PRELOAD, hardcoded run-paths, lazy loading, etc.	possible. Without this
 	directive enabled, all the above things will not be	available.
 	Default: on
+	
+IgnoreForeignLibs (bool)
+	Specifies wether parity should ignore libraries not built by himself. Such
+	libraries, are not processed by parity, but rather given directly to the linker.
+	This means that there will be nothing generated by parity for this library,
+	no symbol table, no loader, etc.
+	Default: on
 
 LazyLoading (bool)
 	Specifies wether lazy loading stubs should be generated. When GenerateLoader is
@@ -129,6 +136,11 @@ LazyLoading (bool)
 	      the symbol is data, it still points to the stub, but accessing the symbol will
 	      cause either an access violation, because the .text section is neither readable
 	      nor writeable, or it will cause random values if reading/writing succeeds.
+	Note: parity now ignores libraries not built by himself to avoid the above described
+	      hard to find problems. Those libraries are linked just like without parity,
+	      by passing them directly to the linker. This means that those libraries won't
+	      be listed when inspecting binaries with parity.inspector. Also see the 
+	      "IgnoreForeignLibs" directive.
 	Default: off
 
 ParityLoader (Path)
