@@ -218,3 +218,5 @@ fixed a problem with, which caused structures to be misaligned in some parts of 
 parity no longer generates things required for the generated loader, if there are zero symbols to load.
 
 changed parts of the parity.runtime library to use internal output routines in favor of fprintf, to assure full functionality even when calling those functions while initializing binaries, where standard handled may not yet be initialized.
+
+the ignorance of foreign libraries is now configurable through the IgnoreForeignLibs directive.
